breadcrumbs and Orders UI changes

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "core-js": "^2.5.4",
+    "highcharts": "^6.2.0",
+    "highcharts-angular": "^2.4.0",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
